# alexa_roomba

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mailmap  @  CHANGELOG.md  CHIP_name_port_gpio.py  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  HARDWARE_SETUP.md  LICENSE  MANIFEST.in  README.md  RPi_name_port_gpio.py  SECURITY.md  config.py  create.py  example-minimal.py  fauxmo.py  install.sh  pyproject.toml  pytest.ini  requirements.txt  roomba-start.sh  roomba.service.template  setup.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  hardware_compatibility.md
docs/: API.md  ARCHITECTURE.md  HARDWARE_SETUP.md  PYTHON3_MIGRATION.md  TESTING.md  TROUBLESHOOTING.md
examples/: README.md  alexa_voice_control.py  autonomous_cleaning.py  play_music.py  sensor_dashboard.py  sensor_reading.py  simple_movement.py  video_demo.py  wall_following.py
legacy/: README.md  example-mqtt.py
roomba/: __init__.py  commands.py  music.py  robot.py  sensors.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_create.py  test_music.py  test_sensors.py  test_utils.py
